mdapi/objects/Entry__c.object
<CustomObject>
    <fields>
        <fullName>Average_Vote_Score__c</fullName>
        <formula>Total_Score__c / Total_Votes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Vote Score</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contest__c</fullName>
        <label>Contest</label>
        <referenceTo>Contest__c</referenceTo>
        <relationshipLabel>Entries</relationshipLabel>
        <relationshipName>Entries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_Score__c</fullName>
        <label>Total Score</label>
        <summarizedField>Vote__c.Score__c</summarizedField>
        <summaryForeignKey>Vote__c.Entry__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Votes__c</fullName>
        <label>Total Votes</label>
        <summaryForeignKey>Vote__c.Entry__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Entry</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>